--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
                 <p><strong>Central Austin Dermatology & Aesthetics</strong><br>
                 2700 W Anderson Ln. Unit 403<br>Austin, TX 78757</p>
                 <p style="margin-top: 1rem;">
-                    <a href="http://googleusercontent.com/maps.google.com/3" target="_blank" style="display: inline-block; padding: 0.8rem 1.5rem; background: var(--gold); color: var(--navy); border-radius: 25px; text-decoration: none; font-weight: 600; font-size: 0.9rem;">
+                    <a href="https://www.google.com/maps/search/?api=1&query=2700+W+Anderson+Ln+Unit+403+Austin+TX+78757" target="_blank" style="display: inline-block; padding: 0.8rem 1.5rem; background: var(--gold); color: var(--navy); border-radius: 25px; text-decoration: none; font-weight: 600; font-size: 0.9rem;">
                         Get Directions
                     </a>
                 </p>
@@ -132,7 +132,7 @@
                     </svg>
                     Email
                 </h3>
-                <p><a href="mailto:dr.nguyen.assistant@gmail.com">dr.nguyen.assistant@gmail.com</a></p>
+                <p><a href="/cdn-cgi/l/email-protection#d4b0a6fabab3a1adb1bafab5a7a7bda7a0b5baa094b3b9b5bdb8fab7bbb9"><span class="__cf_email__" data-cfemail="86e2f4a8e8e1f3ffe3e8a8e7f5f5eff5f2e7e8f2c6e1ebe7efeaa8e5e9eb">[email&#160;protected]</span></a></p>
             </div>
 
             <div class="info-item">
@@ -220,7 +220,7 @@
 
     <footer><p>© 2026 Quoc-Bao Nguyen, MD. All rights reserved.</p></footer>
 
-    <script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
         // Mobile Nav
         const hamburger = document.querySelector('.hamburger');
         const navLinks = document.querySelector('.nav-links');
@@ -257,12 +257,3 @@
                 }
             }).catch(error => {
                 status.style.display = "block";
-                status.style.color = "red";
-                status.innerText = "Connection error. Please try again.";
-                btn.disabled = false;
-                btn.innerText = "Send Message";
-            });
-        });
-    </script>
-</body>
-</html>
