--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
                 <p><strong>Central Austin Dermatology & Aesthetics</strong><br>
                 2700 W Anderson Ln. Unit 403<br>Austin, TX 78757</p>
                 <p style="margin-top: 1rem;">
-                    <a href="http://googleusercontent.com/maps.google.com/3" target="_blank" style="display: inline-block; padding: 0.8rem 1.5rem; background: var(--gold); color: var(--navy); border-radius: 25px; text-decoration: none; font-weight: 600; font-size: 0.9rem;">
+                    <a href="https://www.google.com/maps/search/?api=1&query=2700+W+Anderson+Ln+Unit+403+Austin+TX+78757" target="_blank" style="display: inline-block; padding: 0.8rem 1.5rem; background: var(--gold); color: var(--navy); border-radius: 25px; text-decoration: none; font-weight: 600; font-size: 0.9rem;">
                         Get Directions
                     </a>
                 </p>
