--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
             <ul class="nav-links">
                 <li><a href="index.html" class="active">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
-                <li><a href="expertise.html">EXPERTISE</a></li>
+                <li><a href="expertise.html">CLINICAL BACKGROUND</a></li>
                 <li><a href="speaking.html">SPEAKING</a></li>
                 <li><a href="ads-leadership.html">ADS LEADERSHIP</a></li>
                 <li><a href="blogs.html">BLOGS</a></li>
@@ -441,7 +441,9 @@
             <p class="credentials">MD, MBA, FAAD, AACMS</p>
             <div class="hero-divider"></div>
             <p class="subtitle">Double Board-Certified Dermatologist & Mohs Micrographic Surgeon</p>
-            <p>Advancing dermatologic care through science, education, and a commitment to compassionate, patient-centered excellence in Austin, Texas.</p>
+            <p style="margin-top: 2rem;">Advancing dermatologic care through science, education, and a commitment to compassionate, patient-centered excellence in Austin, Texas.</p>
+            <p style="font-size: 1.1rem; margin-top: 2rem; line-height: 1.8;">This website is a professional informational profile highlighting Dr. Nguyen's clinical training, leadership roles, academic contributions, and speaking engagements.</p>
+            <p style="font-size: 1.1rem; margin-top: 1.2rem; line-height: 1.8;">Dr. Nguyen provides all patient care exclusively through his affiliated medical practice.</p>
         </div>
     </section>
 
@@ -481,7 +483,6 @@
                 <p>Dr. Nguyen's approach blends scientific precision with genuine compassion, creating individualized treatment plans that prioritize optimal outcomes and patient satisfaction.</p>
                 <div class="cta-group">
                     <a href="about.html" class="cta-primary">Meet Dr. Nguyen</a>
-                    <a href="contact.html" class="cta-secondary">Schedule Consultation</a>
                 </div>
             </div>
         </div>
@@ -502,6 +503,7 @@
                 </a>
             </h2>
             <p>Comprehensive dermatologic care combining surgical expertise, medical precision, and aesthetic artistry</p>
+            <p style="margin-top: 1rem; font-style: italic; color: var(--navy); opacity: 0.85;">All clinical services are provided exclusively through Dr. Nguyen's affiliated practice.</p>
         </div>
         <div class="expertise-grid">
             <div class="expertise-card">
@@ -747,7 +749,7 @@
     <path d="M10 3 C7 3 5 5 5 7.5 C5 11 10 17 10 17 C10 17 15 11 15 7.5 C15 5 13 3 10 3 Z" 
           stroke="url(#grad-footer-loc)" stroke-width="1.5" fill="none" filter="url(#glow-footer)"/>
     <circle cx="10" cy="7.5" r="2" fill="url(#grad-footer-loc)" opacity="0.8"/>
-</svg>Based in Austin, Texas – Caring for patients nationally and internationally</p>
+</svg>Austin, Texas (Professional Profile)</p>
         <p>&copy; 2026 Quoc-Bao Nguyen, MD. All rights reserved.</p>
         <p>Accessibility: If you are vision-impaired or have some other impairment covered by the Americans with Disabilities Act or a similar law, and you wish to discuss potential accommodations related to using this website, please contact us<p>
         <p style="margin-top: 1.5rem;"><a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms of Service</a></p>
