--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         }
         
         .hero .subtitle { 
-            font-size: 1.8rem; 
+            font-size: 1.5rem; 
             margin-bottom: 1.5rem; 
             font-weight: 300; 
             color: rgba(255, 255, 255, 0.95);
@@ -426,7 +426,7 @@
             <ul class="nav-links">
                 <li><a href="index.html" class="active">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
-                <li><a href="expertise.html">CLINICAL BACKGROUND</a></li>
+                <li><a href="expertise.html">BACKGROUND</a></li>
                 <li><a href="speaking.html">SPEAKING</a></li>
                 <li><a href="ads-leadership.html">ADS LEADERSHIP</a></li>
                 <li><a href="blogs.html">BLOGS</a></li>
