Update contact email address in contact.html

--- a/contact.html
+++ b/contact.html
@@ -139,7 +139,7 @@
                     </svg>
                     Email for professional inquiries only
                 </h3>
-                <p><a href="mailto:info@baomd.us">info@baomd.us</a></p>
+                <p><a href="mailto:dr.nguyen.assistant@gmail.com">dr.nguyen.assistant@gmail.com</a></p>
             </div>
 
             <div class="info-item">
